Fix to support UNC path names Changed to allow targets to also be specified implicitly Changed to continue on with validation even if an IOException occurs. These get reported as a skipped file now.